# markuptree

./: CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/markuptree/: __init__.py  _compat.py  _utils.py  constants.py  exceptions.py  inputstream.py  serializer.py  tokenizer.py
src/markuptree/filters/: __init__.py  alphabeticalattributes.py  base.py  inject_meta_charset.py  lint.py  optionaltags.py  sanitizer.py  whitespace.py
src/markuptree/treebuilders/: __init__.py  base.py  dom.py  etree.py
src/markuptree/treewalkers/: __init__.py  base.py  dom.py  etree.py
tests/: test_etree_dom.py  test_htmlparser.py  test_inputstream.py  test_tokenizer.py  test_treebuilder.py  test_walkers_serializer.py
