[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markuptree"
version = "0.1.0"
description = "A modern, zero-dependency drop-in replacement for html5lib"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: HTML",
]

[project.optional-dependencies]
lxml = ["lxml"]
chardet = ["chardet"]
all = ["lxml", "chardet"]

[tool.hatch.build.targets.wheel]
packages = ["src/markuptree"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
